--- a/hugo.toml
+++ b/hugo.toml
@@ -20,7 +20,7 @@ author = "Praneith Ranganath"
 description = "My portfolio"
 keywords = "blog,student,northeastern,personal"
 info = ["Masters in Data Analytics", "Northeastern University"]  
-avatarURL = "images/IMG_5888.HEIC"
+avatarURL = "images/IMG_5888.jpg"
 #gravatar = "john.doe@example.com"
 dateFormat = "January 2, 2006"
 since = 2019
