--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "http://www.example.com" 
+baseURL = "http://www.praneith.com" 
 title = "praneith ranganath"
 theme = "hugo-coder"
 languageCode = "en"
@@ -79,26 +79,21 @@ type = "text/html"
 languageName = ":uk:"
 
 [[languages.en.menu.main]]
-name = "About"
-weight = 1
-url = "about/"  
-
-[[languages.en.menu.main]]
 name = "Posts"
-weight = 2
+weight = 1
 url = "posts/"
 
 [[languages.en.menu.main]]
 name = "Projects" 
-weight = 3
+weight = 2
 url = "projects/"
 
 [[languages.en.menu.main]]
 name = "Resume"
-weight = 4
+weight = 3
 url = "resume/"
 
 [[languages.en.menu.main]]
 name = "Contact me"
-weight = 5 
+weight = 4
 url = "contact/"
